Modify the location to cast